--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.4",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
+    "file-saver": "^2.0.5",
     "firebase": "^10.11.1",
     "framer-motion": "^11.1.9",
+    "html-to-image": "^1.11.11",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
